--- a/mines/index.html
+++ b/mines/index.html
@@ -499,7 +499,7 @@
         <button id="explodeButton">Get signal</button>
     </div>
     <div class="tab">
-    <button class="tablinks games-icon" data-tab="Games" onclick="window.location.href=&#39;https://entyludik.github.io/funmain/&#39;;">
+    <button class="tablinks games-icon" data-tab="Games" onclick="window.location.href=&#39;https://entyludik.github.io/foxmain/&#39;;">
         <img src="back.png" alt="Игры">
     </button>
 </div>
